--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,14 @@ body {
 .cell {
     /*width: 32px;*/
     aspect-ratio: 1 / 1;
-    background-color: #777;
+    background-color: #d4d4d4;
     border-right: 1px dashed darkgrey;
     border-bottom: 1px dashed darkgrey;
     box-sizing: border-box;
 }
 
 .wall {
-    background-color: #6b6;
+    background-color: #333;
 }
 
 .active {
@@ -55,7 +55,7 @@ body {
     background-color: #6b6;
 }
 
-.goal {
+.current {
     background-color: #cc6;
 }
 
